<resources>
    <string name="app_name">Musofirlar.uz</string>
    <string name="splash">Splash</string>
    <string name="skip">O\'tkazib yuborish</string>
    <string name="musofirlar_uz">Musofirlar.uz</string>
    <string name="intro1_description">Musofirlar.uz yordamida o\’zingiz uchun qulay va hamyonbop ijara uylarini topishingiz mumkin!</string>
    <string name="keyingisi">Keyingisi</string>
    <string name="next">next</string>
    <string name="intro2_description">Ijaraga uyni oson toping</string>
    <string name="intro3_description">Ishni oson toping</string>
    <string name="intro4_description">Eng yaqin elchixonalar</string>
    <string name="musofirlar_uz_1">Musofirlar.uz yordamida</string>
    <string name="tizimga_kirish">Tizimiga kirish</string>
    <string name="tel_raqam">Telefon raqam</string>
    <string name="eslab_qol">Eslab qol</string>
    <string name="kirish">Kirish</string>
    <string name="forgot_password">Parolni unitdingizmi?</string>
    <string name="yoki">yoki</string>
    <string name="enter_google">Google account orqali kiring</string>
    <string name="not_profile">Profilingiz mavjud emasmi?</string>
    <string name="register_text">Ro’yxatdan o’tish</string>
    <string name="hint_phone">Telefon raqam</string>
    <string name="number_code">+998</string>
    <string name="parol">Parol</string>
    <string name="reg_text">Tizimiga ro’yxatdan o’tish</string>
    <string name="enter_name">To’liq ismingizni kiriting</string>
    <string name="enter_phone">Telefon raqamingizni kiriting</string>
    <string name="enter_password">Parolni o’ylab toping</string>
    <string name="verify_password">Parolni tasdiqlang</string>
    <string name="register_btn">Ro’yxatdan o’tish</string>
    <string name="have_profile">Profilingiz mavjudmi?</string>
    <string name="login">Kirish</string>
    <string name="congratulate">Tabriklaymiz!</string>
    <string name="verify_text">Siz muvaffaqiyatli tarzda ro’yxatdan</string>
    <string name="verify_text_1">o’tdingiz!</string>
    <string name="continue_text">Davom etish</string>
    <string name="rent_home">Ijaraga uylar</string>
    <string name="comfort_offers">Qulay takliflar</string>
</resources>