<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="127dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/tizimga_kirish"
        android:textColor="#000000"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_text1" />

    <com.vicmikhailau.maskededittext.MaskedEditText
        android:id="@+id/login_edittext1"
        android:layout_width="303dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical|left"
        android:hint="@string/tel_raqam"
        android:paddingLeft="85dp"
        android:textSize="15sp"
        android:inputType="phone"
        android:paddingTop="5dp"
        android:imeOptions="actionNext"
        app:mask="(##) ###-##-##"
        android:fontFamily="@font/poppins_medium"
        android:background="@drawable/login_edit_text_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_text2">

    </com.vicmikhailau.maskededittext.MaskedEditText>


    <LinearLayout
        android:layout_width="67dp"
        android:layout_height="28dp"
        app:layout_constraintTop_toTopOf="@id/login_edittext1"
        app:layout_constraintLeft_toLeftOf="@id/login_edittext1"
        android:background="@drawable/login_dropdown_bg"
        android:layout_marginTop="9dp"
        android:id="@+id/exp_dropdown"
        android:layout_marginLeft="7dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dropdown"
            android:layout_marginTop="10.3dp"
            android:layout_marginLeft="8dp"
            
            />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_code"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="3dp"
            />


    </LinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_edittext2"
        android:layout_width="303dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:hint="@string/parol"
        android:textSize="15sp"
        android:fontFamily="@font/poppins_medium"
        android:paddingLeft="15dp"
        android:background="@drawable/login_edit_text_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_edittext1">

    </com.google.android.material.textfield.TextInputEditText>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_open_eye"
        android:id="@+id/password_eye"
        app:layout_constraintTop_toTopOf="@id/login_edittext2"
        app:layout_constraintBottom_toBottomOf="@id/login_edittext2"
        app:layout_constraintRight_toRightOf="@id/login_edittext2"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        />

     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/eslab_qol"
         android:textColor="#8B8B8B"
         android:fontFamily="@font/poppins_medium"
         android:id="@+id/checked_btn"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/login_edittext2"
         android:layout_marginLeft="49dp"
         />
    <LinearLayout
        android:id="@+id/login_btn"
        android:layout_width="303dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_btn"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checked_btn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/kirish"
            android:textColor="#FFFFFF"
            android:textSize="13sp"

            />
    </LinearLayout>

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/forgot_password"
        android:textColor="#007FFF"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn" />

    <ImageView
        android:id="@+id/login_line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:src="@drawable/ic_line"
        app:layout_constraintLeft_toLeftOf="@id/login_btn"
        app:layout_constraintRight_toLeftOf="@id/or_text"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_text" />

    <TextView
        android:id="@+id/or_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="51dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/yoki"
        android:textColor="#8B8B8B"
        android:textSize="13sp"
        app:layout_constraintLeft_toRightOf="@id/login_line1"
        app:layout_constraintRight_toLeftOf="@id/login_line2"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_text" />

    <ImageView
        android:id="@+id/login_line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="61dp"
        android:src="@drawable/ic_line"
        app:layout_constraintLeft_toRightOf="@id/or_text"
        app:layout_constraintRight_toRightOf="@id/login_btn"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_text" />

    <LinearLayout
        android:id="@+id/enter_google"
        android:layout_width="303dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/google_btn"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintLeft_toLeftOf="@id/login_line1"
        app:layout_constraintRight_toRightOf="@id/login_line2"
        app:layout_constraintTop_toBottomOf="@id/login_line1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:src="@drawable/ic_google_logo_icon" />


        <View
            android:layout_width="1dp"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:background="#8B8B8B" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/enter_google"
            android:textColor="#8B8B8B"
            android:textSize="13sp"

            />

    </LinearLayout>

    <TextView
        android:id="@+id/not_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="134dp"
        android:layout_marginBottom="49dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/not_profile"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:layout_marginRight="2.5dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintRight_toLeftOf="@id/register_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:layout_marginLeft="2.5dp"
        android:textSize="13sp"
        app:layout_constraintVertical_chainStyle="packed"
        android:id="@+id/register_text"
        app:layout_constraintBottom_toBottomOf="@id/not_profile"
        app:layout_constraintLeft_toRightOf="@id/not_profile"
        app:layout_constraintTop_toTopOf="@id/not_profile"
        android:fontFamily="@font/poppins_medium"
        android:textColor="#007FFF"
        app:layout_constraintRight_toRightOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
